--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,54 @@
-h1{
-  color: red;
+*{
+-moz-box-sizing: border-box;
+ -webkit-box-sizing: border-box;
+ box-sizing: border-box;
+ font-family: serif;
+ text-decoration: none;
+ list-style: none;
+}
+body{
+  background: rgb(90,0,216);
+  background: linear-gradient(0deg, rgba(90,0,216,1) 28%, rgba(245,125,51,1) 100%);
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
+}
+.container{
+  position: absolute;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 80%;
+  height: 675px;
+  background-color: #FFFFFF;
+  /* border radius */
+  border-radius: 12px 12px 12px 12px;
+  -moz-border-radius: 12px 12px 12px 12px;
+  -webkit-border-radius: 12px 12px 12px 12px;
+  border: 0px solid #000000;
+  /* shadow */
+  -webkit-box-shadow: -4px 4px 74px -4px rgba(92,85,92,1);
+-moz-box-shadow: -4px 4px 74px -4px rgba(92,85,92,1);
+box-shadow: -4px 4px 74px -4px rgba(92,85,92,1);
+overflow: hidden;
+}
+.container .results{
+  display: inline-block;
+  width: 38%;
+  margin: 0;
+  padding: 0;
+  float: left;
+}
+.container .input-info{
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  background-color: #F57D33;
+  height: inherit;
+  width: 62%;
+  float: right;
 }
