--- a/styles/main.css
+++ b/styles/main.css
@@ -18,22 +18,22 @@ body {
 }
 
 .container {
-  position: absolute;
-  margin: auto;
+  /* position: absolute; */
+  margin: 0 auto;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  width: 80%;
+  /* width: 80%; */
   height: 780px;
   background-color: #FFFFFF;
   text-align: center;
   overflow: auto;
   /* border radius */
-  border-radius: 12px 12px 12px 12px;
+  /* border-radius: 12px 12px 12px 12px;
   -moz-border-radius: 12px 12px 12px 12px;
   -webkit-border-radius: 12px 12px 12px 12px;
-  border: 0px solid #000000;
+  border: 0px solid #000000; */
   /* shadow */
   -webkit-box-shadow: -4px 4px 74px -4px rgba(92, 85, 92, 1);
   -moz-box-shadow: -4px 4px 74px -4px rgba(92, 85, 92, 1);
@@ -153,6 +153,7 @@ body {
   /* :nth-child(-n+3) */
   flex-grow: 1;
   width: 100%;
+  height: 55px;
   text-align: center;
   border: 1px solid black;
   padding: 15px 20px;
@@ -172,7 +173,6 @@ body {
   flex-direction: row;
   width: 100%;
   text-align: center;
-  margin: 5% 0%;
   cursor: pointer;
 }
 
@@ -181,10 +181,12 @@ body {
   flex-direction: column;
   flex-grow: 1;
   width: 100%;
+  height: 55px;
   cursor: pointer;
   border: 1px solid black;
   padding: 15px 35px;
   margin-left: 2.3%;
+  margin-bottom: 20px;
 }
 
 /* changes bckgrd color to blk & font color white */
@@ -199,7 +201,6 @@ body {
   flex-direction: row;
   width: 100%;
   text-align: center;
-  margin: 0 0 5% 0;
 }
 
 .container .input-info .input-info-container .weight :nth-child(-n+3) {
@@ -217,7 +218,7 @@ body {
   display: block;
   width: 100%;
   text-align: center;
-  margin: 7% 0 0 0;
+  margin: 40px 0 20px 0;
 }
 
 .container .input-info .input-info-container .active-level {
@@ -225,8 +226,6 @@ body {
   flex-direction: row;
   width: 100%;
   text-align: center;
-  margin: 5% 0%;
-  /* overflow: hidden; */
 }
 
 .container .input-info .input-info-container .active-level :nth-child(-n+3) {
@@ -234,6 +233,7 @@ body {
   flex-direction: column;
   flex-grow: 1;
   width: 100%;
+  height: 55px;
   border: 1px solid black;
   padding: 15px 25px;
   margin-left: 2.3%;
@@ -252,7 +252,7 @@ body {
   flex-direction: row;
   width: 100%;
   text-align: center;
-  margin: 5% 0%;
+  margin-bottom: 20px;
 }
 
 .container .input-info .input-info-container .body-type :nth-child(-n+3) {
@@ -260,6 +260,7 @@ body {
   flex-direction: column;
   flex-grow: 1;
   width: 100%;
+  height: 55px;
   font-size: .8rem;
   border: 1px solid black;
   padding: 15px 15px;
@@ -279,7 +280,6 @@ body {
   flex-direction: row;
   width: 100%;
   text-align: center;
-  margin-top: 5%;
 }
 
 .container .input-info .input-info-container .submit-or-clear :nth-child(-n+2) {
@@ -287,6 +287,7 @@ body {
   flex-direction: column;
   flex-grow: 1;
   width: 100%;
+    height: 55px;
   border: 3px solid black;
   padding: 15px 15px;
   margin-left: 2.3%;
@@ -301,4 +302,31 @@ body {
 .container .input-info .input-info-container .submit-or-clear h3:hover {
   background-color: black;
   color: #fff;
+}
+
+/* media queries */
+@media (max-width: 680px) {
+.contianer{
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+}
+.container .input-info{
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  order: 1;
+  height: 700px;
+  /* float: none; */
+}
+.container .results{
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  order: 2;
+  height: 780px;
+}
+
+
+
 }
