--- a/styles/main.css
+++ b/styles/main.css
@@ -118,6 +118,13 @@ body {
   color: #fff;
 }
 
+/* box shadow */
+.shadow {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+-webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+-moz-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
 .container .input-info {
   display: inline-block;
   margin: 0;
@@ -159,6 +166,7 @@ body {
   padding: 15px 20px;
   margin-left: 2.3%;
   cursor: pointer;
+}
 }
 
 /* changes bckgrd color to blk & font color white */
@@ -287,7 +295,7 @@ body {
   flex-direction: column;
   flex-grow: 1;
   width: 100%;
-    height: 55px;
+  height: 55px;
   border: 3px solid black;
   padding: 15px 15px;
   margin-left: 2.3%;
@@ -334,7 +342,6 @@ body {
   position: relative;
     top: 50%;
 }
-
-
-
+.container .input-info .input-info-container .active-level :nth-child(3){
+  padding: 7px 25px 15px 25px;
 }
