--- a/styles/main.css
+++ b/styles/main.css
@@ -18,23 +18,15 @@ body {
 }
 
 .container {
-  /* position: absolute; */
   margin: 0 auto;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  /* width: 80%; */
-  height: 780px;
+  height: 100vh;
   background-color: #FFFFFF;
   text-align: center;
   overflow: auto;
-  /* border radius */
-  /* border-radius: 12px 12px 12px 12px;
-  -moz-border-radius: 12px 12px 12px 12px;
-  -webkit-border-radius: 12px 12px 12px 12px;
-  border: 0px solid #000000; */
-  /* shadow */
   -webkit-box-shadow: -4px 4px 74px -4px rgba(92, 85, 92, 1);
   -moz-box-shadow: -4px 4px 74px -4px rgba(92, 85, 92, 1);
   box-shadow: -4px 4px 74px -4px rgba(92, 85, 92, 1);
@@ -43,7 +35,7 @@ body {
 .results {
   display: inline-block;
   width: 42%;
-  height: 780px;
+  height: 100vh;
   margin: 0;
   padding: 0;
   float: left;
@@ -55,8 +47,6 @@ body {
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
   letter-spacing: 4px;
   color: #fff;
-  overflow-y: scroll;
-  overflow-x: scroll;
 }
 
 .container .results .nutrition-info {
@@ -72,7 +62,6 @@ body {
   font-size: 6.5rem;
   margin-bottom: 2.5%;
   letter-spacing: 5px;
-  /* background-color: #F57D33; */
 }
 
 .container .results .nutrition-info .display-calories h2 {
@@ -83,9 +72,6 @@ body {
   display: inline-block;
   margin-right: 5%;
   margin-bottom: 5%;
-
-/* background-color: #F57D33; */
-  /* border: 1px solid #F57D33; */
 }
 
 .container .results .nutrition-info .list span {
@@ -123,10 +109,11 @@ body {
 }
 
 /* box shadow */
+
 .shadow {
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
--webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
--moz-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
 .container .input-info {
@@ -161,7 +148,6 @@ body {
 }
 
 .container .input-info .input-info-container .selectGoals {
-  /* :nth-child(-n+3) */
   flex-grow: 1;
   width: 100%;
   height: 55px;
@@ -172,8 +158,8 @@ body {
   cursor: pointer;
 }
 
-
 /* changes bckgrd color to blk & font color white */
+
 .container .input-info .input-info-container .goals h2:hover {
   background-color: black;
   color: #fff;
@@ -280,6 +266,7 @@ body {
 }
 
 /* changes bckgrd color to blk & font color white */
+
 .container .input-info .input-info-container .body-type h3:hover {
   background-color: black;
   color: #fff;
@@ -315,34 +302,34 @@ body {
 }
 
 /* media queries */
+
 @media (max-width: 680px) {
-.container{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  position: static;
-  height: auto;
-}
-.container .input-info{
-  display: flex;
-  width: 100%;
-  flex-direction: column;
-  order: 1;
-  height: 750px;
-  /* float: none; */
-}
-.container .input-info .input-info-container{
-  width: 90%;
-}
-.container .results{
-  display: flex;
-  width: 100%;
-  flex-direction: column;
-  order: 2;
-  height: 780px;
-  position: relative;
-  top: 50%;
-}
-.container .input-info .input-info-container .active-level :nth-child(3){
-  padding: 7px 25px 15px 25px;
-}
+  .container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: static;
+    height: auto;
+  }
+  .container .input-info {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    order: 1;
+    height: 100vh;
+  }
+  .container .input-info .input-info-container {
+    width: 90%;
+  }
+  .container .results {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    order: 2;
+    position: relative;
+    top: 50%;
+    height: 100vh;
+  }
+  .container .input-info .input-info-container .active-level :nth-child(3) {
+    padding: 7px 25px 15px 25px;
+  }
